Add placeholderapi to global

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,10 @@
-name: ChatPerWorld
+name: ${project.name}
 author: gronnmann
-version: 1.0
+description: ${project.description}
+version: ${project.version}
 main: io.github.gronnmann.chatperworld.Main
+softdepend: [PlaceholderAPI]
+
 commands:
     chatperworld:
         description: Main plugin command.
